--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,26 @@
 asgiref==3.7.2
+breadability==0.1.20
+certifi==2023.7.22
+chardet==5.2.0
+charset-normalizer==3.3.0
+click==8.1.7
 Django==4.2.5
+django-extensions==3.2.3
+docopt==0.6.2
+idna==3.4
+joblib==1.3.2
+lxml==4.9.3
+nltk==3.8.1
+numpy==1.26.0
 Pillow==10.0.1
+pycountry==22.3.5
 python-dotenv==1.0.0
+regex==2023.8.8
+requests==2.31.0
+scipy==1.11.3
+smart-open==6.4.0
 sqlparse==0.4.4
+tqdm==4.66.1
 typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==2.0.5
